fixed list overlap with list title

--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ body {
   text-align: center;
   font-size: 14pt;
   font-weight: bold;
-  background-color: inherit;
+  background-color: #202124;
 
   padding-top: 5px;
   position:fixed;
